# fluency-builder

./: Cargo.toml  LICENSE  README.md  test.fy
fluency/: Cargo.toml
fy_generator/: Cargo.toml
fy_generator/src/: lib.rs
fy_generator/src/script/: mod.rs  script_traverse.rs
fy_generator/src/template/: template_generator.rs
fy_parse/: Cargo.toml
fy_parse/src/: lib.rs  read_file.rs
fy_parse/src/ast_tree/: ast_template.rs  mod.rs
fy_parse/src/ast_tree/script/: mod.rs  parse_script.rs
fy_parse/src/ast_tree/template/: ast_template.rs  mod.rs  parse_template.rs
web/: bound.js  fluency.umd.js  index.html  test.fy
