[package]
name = "fy_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fy_parse = {path = "../fy_parse"}
swc_ecma_ast = "0.58.0"
swc_common = "0.14.6"
swc = "0.86.0"
swc_ecma_utils = "0.52.5"
swc_ecma_visit = "0.44.2"
serde_json = "1.0.85"
