[package]
name = "fy_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fy_parse = {path = "../fy_parse"}
swc_ecma_ast = "0.91.1"
swc_common = "0.28.1"
swc = "0.226.8"
swc_ecma_utils = "0.102.3"
serde_json = "1.0.85"
