[package]
name = "fy_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
project-root = "0.2.1"
swc = "0.226.8"
swc_ecma_parser = "0.119.3"
swc_common = "0.28.1"
swc_ecma_visit = "0.77.1"
swc_ecma_ast = "0.91.1"
swc_ecma_transforms = "0.193.7"
swc_ecma_transforms_base = "0.108.5"
swc_ecma_transforms_typescript = "0.154.6"
swc_ecma_transforms_compat = "0.131.6"
swc_atoms = "0.4.12"
